# onvif-mock

./: .gitattributes  .gitignore  LICENSE.md  README.md  pyproject.toml
examples/: multi-device.yaml  single-device.yaml
src/camera_mock/: __main__.py  auth.py  cli.py  config.py  discovery.py  media.py  models.py  runtime.py  samples.py  server.py  soap.py
tests/: test_auth.py  test_config.py  test_media.py  test_server.py  test_soap.py
videos/: example.ts  example.yaml
